feat: add initial project setup with configuration files and example components

--- a/example/tsconfig.json
+++ b/example/tsconfig.json
@@ -1,17 +1,6 @@
 {
-  "extends": "expo/tsconfig.base",
+  "extends": "../tsconfig",
   "compilerOptions": {
-    "strict": true,
-    "paths": {
-      "@/*": [
-        "./*"
-      ]
-    }
-  },
-  "include": [
-    "**/*.ts",
-    "**/*.tsx",
-    ".expo/types/**/*.ts",
-    "expo-env.d.ts"
-  ]
+    // Avoid expo-cli auto-generating a tsconfig
+  }
 }
