--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "rn-toast",
-  "version": "0.1.0-beta",
-  "description": "coming-soon",
+  "version": "0.1.0",
+  "description": "A simple toast notification library for React Native and Expo Compactible.",
   "source": "./src/index.tsx",
   "main": "./lib/commonjs/index.js",
   "module": "./lib/module/index.js",
