--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
-  "name": "@originaltimi/rn-toast",
-  "version": "0.1.1",
+  "name": "expo-toast",
+  "version": "0.1.2",
   "description": "A simple toast notification library for React Native and Expo Compactible.",
   "source": "./src/index.tsx",
   "main": "./lib/commonjs/index.js",
