--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "expo-toast",
+  "name": "native-toast",
   "version": "0.1.2",
   "description": "A simple toast notification library for React Native and Expo Compactible.",
   "source": "./src/index.tsx",
