--- a/package.json
+++ b/package.json
@@ -1,9 +1,10 @@
 {
-  "name": "native-toast",
-  "version": "0.1.2",
+  "name": "@originaltimi/rn-toast",
+  "version": "0.1.3",
   "description": "A simple toast notification library for React Native and Expo Compactible.",
   "source": "./src/index.tsx",
   "main": "./lib/commonjs/index.js",
+  "types": "./lib/module/src/index.d.ts",
   "module": "./lib/module/index.js",
   "exports": {
     ".": {
