--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "description": "A simple toast notification library for React Native and Expo Compactible.",
   "source": "./src/index.tsx",
   "main": "./lib/commonjs/index.js",
-  "types": "./lib/module/src/index.d.ts",
+  "types": "./lib/typescript/module/index.d.ts",
   "module": "./lib/module/index.js",
   "exports": {
     ".": {
